--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head>
 <script type="text/javascript" src='scripts/jquery-2.1.1.min.js' defer></script>
 <script type="text/javascript" src='scripts/jquery-ui.min.js' defer></script>
-<script type="text/javascript" src="scripts/Script.js" defer></script>
+<script type="text/javascript" src="scripts/script.js" defer></script>
 <link rel="stylesheet" style="css/style" href="css/stylesheet.css">
 </head>
 <body>
