--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@ The official Kurt Cobain appreciation site.
 </div>
 	<div id="divLogin">
 		<input type="text" id="textBox"></input>
-		<img id="image" src="Images/KurtCobain.jpg">
+		<img id="image" src="images/KurtCobain.jpg">
 	</div>
 </body>
