--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 
 <div id="divHeader">
-The official Kurt Cobain appreciation site.
+Welcome to my portfolio.
 </div>
 	<div id="divLogin">
 		<input type="text" id="textBox"></input>
