--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 Welcome to my portfolio.
 </div>
 	<div id="divLogin">
-		<input type="text" id="textBox"></input>
+		<input type="text" id="textBox" value="Under Construction"></input>
 		<img id="image" src="images/KurtCobain.jpg">
 	</div>
 </body>
