--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@ Welcome to my portfolio.
 </div>
 	<div id="divLogin">
 		<input type="text" id="textBox" value="Under Construction"></input>
-		<img id="image" src="images/KurtCobain.jpg">
+		<img id="image" src="images/LogoFace.png">
 	</div>
 </body>
