--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@ Welcome to my portfolio.
 </div>
 	<div id="divLogin">
 		<input type="text" id="textBox" value="Under Construction"></input>
-		<img id="image" src="images/LogoFace.png">
+		<div id = "divPlayer">
+		<canvas id="equalizer" ></canvas>
+		<img id="logo" src="images/LogoFace.png"/>
+		</div>
 	</div>
 </body>
