added player tools

--- a/index.html
+++ b/index.html
@@ -15,5 +15,8 @@ Welcome to my portfolio.
 		<canvas id="equalizer" ></canvas>
 		<img id="logo" src="images/LogoFace.png"/>
 		</div>
+		<div id="divPlayerTools">
+			<img id="pause" src="images/LogoFace.png"/>
+		</div>
 	</div>
 </body>
