color scheme change

--- a/index.html
+++ b/index.html
@@ -3,14 +3,24 @@
 <script type="text/javascript" src='scripts/jquery-ui.min.js' defer></script>
 <script type="text/javascript" src="scripts/script.js" defer></script>
 <link rel="stylesheet" style="css/style" href="css/stylesheet.css">
+<link rel="shortcut icon" href="images/siteIcon.ico">
 </head>
+<title>Enzo Borg Frantz</title>
 <body>
 
 <div id="divHeader">
 Welcome to my portfolio.
 </div>
+	<div id="divMenu">
+		<ul id="ulMenu">
+			<li id="liMenuItem">Home</li>
+			<li id="liMenuItem">Profile</li>
+			<li id="liMenuItem">Contact</li>
+			<li id="liMenuItem">Swag</li>
+		</ul>
+	</div>
 	<div id="divLogin">
-		<input type="text" id="textBox" value="Under Construction"></input>
+		<!--<input type="text" id="textBox" value="Under Construction"></input>-->
 		<div id = "divPlayer">
 		<canvas id="equalizer" ></canvas>
 		<img id="logo" src="images/LogoFace.png"/>
