--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 		</style>
 	</head>
 	<body>
-		<p class="header"><span>Unity Web Player | </span>Unity Fun Times</p>
+		<p class="header"><span>Unity Web Player | </span>Unity Fun Times FOXX MATTHEW</p>
 		<p style="color: #c00; font-size: small; font-style: italic;">Built with beta version of Unity. Will only work on your computer!</p>
 		<div class="content">
 			<div id="unityPlayer">
