--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <head>
+<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 <link rel="stylesheet" style="css/style" href="css/stylesheet.css">
 </head>
-<img id="logo" src="images/newLogo.png " style="margin-top: 175;"/>
+<img id="logo" src="images/NewLogo.png " style="margin-top: 175;"/>
 <p style="font-family: Century Gothic; font-weight: lighter; font-size: 50; text-align:center; margin-top: 25;">Coming Soon<p>
 <p style="font-family: Century Gothic; font-weight: lighter; font-size: 22; text-align:center; margin-top: 25; 
 color: #a3a3a3;">enzoborgfrantz.com<p>
