--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@
 <img id="logo" src="images/NewLogo.png " style="margin-top: 175;"/>
 <p style="font-family: Century Gothic; font-weight: lighter; font-size: 50; text-align:center; margin-top: 25;">Coming Soon<p>
 <p style="font-family: Century Gothic; font-weight: lighter; font-size: 22; text-align:center; margin-top: 25; 
-color: #a3a3a3;">enzoborgfrantz.com<p>
+color: #636363;">enzoborgfrantz.com<p>
 
