--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <head>
-<link rel="shortcut icon" href="images/whiteAnt.ico" type="image/x-icon">
-<link rel="stylesheet" style="css/style" href="css/stylesheet.css">
+    <link rel="shortcut icon" href="images/whiteAnt.ico" type="image/x-icon">
+    <link rel="stylesheet" style="css/style" href="css/stylesheet.css">
 </head>
 <title>enzoborgfrantz</title>
-<img id="logo" src="images/NewLogo.png " style="margin-top: 175;"/>
-<p style="font-family: Century Gothic; font-weight: lighter; font-size: 50; text-align:center; margin-top: 25;">Coming Soon<p>
-<p style="font-family: Century Gothic; font-weight: lighter; font-size: 22; text-align:center; margin-top: 25; 
-color: #636363;">enzoborgfrantz.com<p>
-
+<img id="logo" src="images/NewLogo.png " style="margin-top: 175;" />
+<p style="font-family: Century Gothic; font-weight: lighter; font-size: 50; text-align:center; margin-top: 25;">Coming Soon
+    <p>
+        <p style="font-family: Century Gothic; font-weight: lighter; font-size: 22; text-align:center; margin-top: 25;
+color: #636363;">enzoborgfrantz.site
+            <p>
