--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@
 <p style="font-family: Century Gothic; font-weight: lighter; font-size: 50; text-align:center; margin-top: 25;">Coming Soon
     <p>
         <p style="font-family: Century Gothic; font-weight: lighter; font-size: 22; text-align:center; margin-top: 25;
-color: #636363;">enzoborgfrantz.site
+color: #636363;">enzoborgfrantz.site - updated
             <p>
