Set coming soon text

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <head>
     <link rel="shortcut icon" href="images/whiteAnt.ico" type="image/x-icon">
     <link rel="stylesheet" style="css/style" href="css/stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Raleway">
 </head>
-<title>enzoborgfrantz</title>
+<title style="font-family: Raleway;">Enzo Borg Frantz</title>
 <img id="logo" src="images/NewLogo.png " style="margin-top: 175;" />
-<p style="font-family: Century Gothic; font-weight: lighter; font-size: 50; text-align:center; margin-top: 25;">Coming Soon
+<p style="font-family: Raleway; color:#86d7a6; font-weight: lighter; font-size: 50; text-align:center; margin-top: 25;">Enzo Borg Frantz
     <p>
-        <p style="font-family: Century Gothic; font-weight: lighter; font-size: 22; text-align:center; margin-top: 25;
-color: #636363;">enzoborgfrantz.site - updated
+        <p style="font-family: Raleway; font-weight: lighter; font-size: 22; text-align:center; margin-top: 25;
+color: #808080;">Coming soon.
             <p>
