--- a/index.html
+++ b/index.html
@@ -1,12 +1,6 @@
-<head>
-    <link rel="shortcut icon" href="images/whiteAnt.ico" type="image/x-icon">
-    <link rel="stylesheet" style="css/style" href="css/stylesheet.css">
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Raleway">
-</head>
-<title style="font-family: Raleway;">Enzo Borg Frantz</title>
-<img id="logo" src="images/NewLogo.png " style="margin-top: 175;" />
-<p style="font-family: Raleway; color:#86d7a6; font-weight: lighter; font-size: 50; text-align:center; margin-top: 25;">Enzo Borg Frantz
-    <p>
-        <p style="font-family: Raleway; font-weight: lighter; font-size: 22; text-align:center; margin-top: 25;
-color: #808080;">Coming soon.
-            <p>
+<!DOCTYPE html>
+
+<body>
+	<div id="root"></div>
+	<script src="build/bundle.js" type="text/javascript"></script>
+</body>
