--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
 
 <body>
 	<div id="root"></div>
+	<title>enzoborgfrantz</title>
 	<script src="build/bundle.js" type="text/javascript"></script>
 </body>
