--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
-
+<head>
+  <meta charset="UTF-8">
+  <meta name="description" content="Enzo sample site">
+  <meta name="keywords" content="HTML,CSS,XML,JavaScript">
+  <meta name="author" content="Enzo Borg Frantz">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
 <body>
 	<div id="root"></div>
 	<title>enzoborgfrantz</title>
