--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta property="og:image" content="http://imgur.com/r/cars/NFvH4wU" />
-<meta property="og:url"content="http://www.enzoborgfrantz.site/" />
+<meta property="og:url"content="http://enzoborgfrantz.site/" />
 <meta property="og:type"          content="website" />
 <meta property="og:title" content="example title" />
 <meta property="og:description" content="example description goes here." />
